snowflake-id-generator/k8s/kuard/kuard-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kuard-deployment
  labels:
    app: kuard
  annotations:
    kubernetes.io/change-cause: "Update to 1.2.3" # Описание к ревизии
spec:
  replicas: 3
  selector:
    matchLabels:
      app: kuard
  strategy: # Стратегия развертывания типа RollingUpdate
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  template:
    metadata:
      labels:
        app: kuard
    spec:
      containers:
        - name: kuard
          image: jmutai/kuard-amd64:blue
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /healthy
              port: 8080
            initialDelaySeconds: 15
            timeoutSeconds: 2
            periodSeconds: 20
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /ready
              port: 8080
            initialDelaySeconds: 5
            timeoutSeconds: 1
            periodSeconds: 5
            failureThreshold: 3
            successThreshold: 1
