snowflake-id-generator/k8s/kuard/kuard-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: kuard
  labels:
    app: kuard # Чтобы selector нашел Pod, нужно добавить метку
spec:
  containers:
    - image: jmutai/kuard-amd64:blue
      name: kuard
      env: # Параметры из ConfigMap подключаются как переменные окружения
        - name: LOG_LEVEL
          valueFrom:
            configMapKeyRef:
              name: kuard-config
              key: LOG_LEVEL
        - name: MESSAGE
          valueFrom:
            configMapKeyRef:
              name: kuard-config
              key: MESSAGE
      volumeMounts: # Параметры из ConfigMap подключаются как файл из хранилища
        - name: kuard-config-volume
          mountPath: /config
          readOnly: true
      ports:
        - containerPort: 8080
          name: http
          protocol: TCP
      livenessProbe:
        httpGet:
          path: /healthy
          port: 8080
        initialDelaySeconds: 15
        timeoutSeconds: 2
        periodSeconds: 20
        failureThreshold: 3
      readinessProbe:
        httpGet:
          path: /ready
          port: 8080
        initialDelaySeconds: 5
        timeoutSeconds: 1
        periodSeconds: 5
        failureThreshold: 3
        successThreshold: 1
  volumes: # Подключение ConfigMap к объекту Pod
    - name: kuard-config-volume
      configMap:
        name: kuard-config
