snowflake-id-generator/k8s/kuard/kuard-clusterip.yml
apiVersion: v1
kind: Service
metadata:
  name: kuard-service
spec:
  type: ClusterIP # можно не указывать, значение по умолчанию
  selector:
    app: kuard-service
  ports:
    - name: http
      protocol: TCP
      port: 80 # порт сервиса внутри кластера
      targetPort: 8080 # порт контейнера
