snowflake-id-generator/k8s/kuard/kuard-nodeport-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: kuard-service
spec:
  selector:
    app: kuard
  ports:
    - name: http
      port: 80 # Внутренний порт сервиса
      targetPort: 8080 # Порт контейнера
      nodePort: 30080 # Внешний порт узла (для доступа снаружи), допустимый диапазон 30000–32767
  type: NodePort
